--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,47 @@ html, body {
     height: 100vh;
     background-color: black;
     overflow: hidden;
+    display: none;
+}
+
+#intro {
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    overflow: hidden;
+}
+
+.title {
+    width: 100%;
+    color: white;
+    position: absolute;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Didot;
+    text-align: center;
+    flex-direction: column;
+}
+
+.bottom-line {
+    color: #959595;
+    width: 100%;
+    position: absolute;
+    margin: 0;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -90%);
+    opacity: 0.5;
+    text-align: center;
+    font-family: Garamond;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .sidenav {
