--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,30 @@ html, body {
     font-family: "Lato", sans-serif;
 }
 
+#container {
+    width: 100vw;
+    background-color: black;
+    overflow: hidden;
+}
+
 #content {
+    position: absolute;
     width: 100vw;
     height: 100vh;
     background-color: black;
     overflow: hidden;
-    display: none;
+    display: block;
+    z-index: 998;
 }
 
 #intro {
+    position: absolute;
     width: 100%;
     height: 100vh;
     background-color: black;
     overflow: hidden;
+    display: block;
+    z-index: 999;
 }
 
 .title {
